--- a/AwesomeDevEvents/AwesomeDevEvents.API/appsettings.json
+++ b/AwesomeDevEvents/AwesomeDevEvents.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DevEventsCs": "Server=localhost; Database=DevEvents; Integrated Security= true; trustServerCertificate=true; Trusted_Connection=true"
+    }
 }
